# sinkron

./: .dockerignore  .gitignore  API.ts  Dockerfile  Dockerfile.back  Dockerfile.back.simple  Dockerfile.front  Dockerfile.front.simple  LICENSE  PERMISSIONS.txt  README.md  TODO.txt  app.Dockerfile  captain-definition-back  captain-definition-front  docker-compose.yml  front.Dockerfile  local.docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  webpack.front.config.js  webpack.server.config.js
dummy/: index.html
eslint/: browser.js  node.js
nginx/: default.conf.template
not_working/: Dockerfile.back  Dockerfile.front
rust/: Cargo.toml  Dockerfile  diesel.toml
rust/migrations/2024-10-25-083317_initial/: up.sql
rust/src/: api_types.rs  db.rs  error.rs  groups.rs  main.rs  models.rs  permissions.rs  protocol.rs  sinkron.rs  sinkron.txt  sinkron2.rs  sinkron3.txt  supervisor.rs
rust/src/actors/: client.rs  collection.rs  mod.rs  sinkron.rs  supervisor.rs
sinkron/: .env  Cargo.toml  Dockerfile
sinkron/src/: db.rs  error.rs  groups.rs  main.rs  models.rs  permissions.rs  protocol.rs  schema.rs  sinkron.rs  types.rs
sinkron/src/actors/: client.rs  collection.rs  mod.rs  sinkron.rs  supervisor.rs
src/: server.ts
src/front/: fetchJson.ts  index.html  index.tsx  store.ts  store.tsx  transformedMap.ts
src/front/components/: CategoriesList.tsx
src/front/ui/: ActionStateView.tsx  Container.tsx  button.tsx  icon.tsx  menu.tsx
src/front/views/: AccountAndSpaceView.tsx  CategoriesView.tsx  CreateCategoryView.tsx  CreateSpaceView.tsx  DocumentListView.tsx  DocumentView.tsx  LoginView.tsx  SelectCategoriesView.tsx  SpaceMembersView.tsx  SpaceView.tsx  SwitchSpaceView.tsx
src/paper/: app.ts  entities.ts
src/paper/controller/: index.ts  spaces.ts  users.test.ts  users.ts
src/paper/routes/: login.ts  spaces.ts
src/sinkron/: -passwordHash.ts  client.ts  permissions.ts  result.ts  server.test.ts  server.ts  sinkron.ts  ws.ts
