[package]
name = "sinkron"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
base64 = "0.22.1"
bb8 = "0.8.6"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["uuid", "chrono"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.22"
loro = "0.16.12"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] } 
tokio-util = "0.7.12"
uuid = { version = "1.11.0", features = ["serde"] }
